--- a/remock.html
+++ b/remock.html
@@ -16,9 +16,36 @@
 
                     
                   </div>
-        
-    </div>
+<div id="logo">
+        <img src="logo.png">
+        <img src="pinklogo.png">
+</div>
+<div class="bluebar">
+                <a id="dropdown" class="bluelinks" href="#">Giveaways</a>
+                <!-- <div class="dropdownContent">
+                        <a href="#">APP Reviews</a>
+                </div> -->
+                <a class="bluelinks" href="#">Home Keeping</a>
+                <a class="bluelinks"href="#">Parenting</a>
+                <a class="bluelinks"href="#">Celebrations</a>
+                <a class="bluelinks" href="#">Meal Time</a>
+                <a class="bluelinks" href="#">Frugal Living</a>
+                <a class="bluelinks"href="#">Marriage</a>
+                <a class="bluelinks" href="#">Inspiration</a>
 
+</div>
+<div id="subwhite">
+<div id="left">
+        <h1>4 Simple EGG-stravagent Easter Centerpieces</h1>
+        <p>April 1, 2011 by moms 1 comment</p>
+        <h2>Sweeten a candle display</h2>
+        <img id="jellybean" src="jellybean.jpg">
+</div>
+<div id="right">
+        <p>text!</p>
+</div>
+</div>
+    </div>
 </body>
 
 
