added more content

--- a/remock.html
+++ b/remock.html
@@ -40,9 +40,35 @@
         <p>April 1, 2011 by moms 1 comment</p>
         <h2>Sweeten a candle display</h2>
         <img id="jellybean" src="jellybean.jpg">
+        <p>From: <a href="#">All You Magazine</a></p>
+        <p>Use the abundance of jelly beans to bring some color to the table. Place a glass hurricane on a plate or pedestal. Center a pillar candle inside it. Fill the surrounding space 1" high with one color of jellybeans, then add a 1" layer of a different color directly on top.</p>
+        <br>
+        <h2>Peeps Easter Centerpiece</h2>
+        <br>
+        <img id="easterflowers" src="easterflowers.jpg">
+        <p>From: <a href="#">All You Magazine</a></p>
+        <p>Here's what you'll need:</p>
+        <br>
+        <ul>
+            <li>Two similarly shaped vases, one 3" narrower than the other</li>
+            <li>Peeps</li>
+            <li>Jelly beans</li>
+            <li>Flowers</li>
+        </ul>
+        
+
 </div>
+
 <div id="right">
-        <p>text!</p>
+        <div id="searchdiv">
+        <input type=text value="Search 24/7 Moms">
+         </div>
+         <div id="subscribe">
+             <p>Subscribe By Email   Subscribe by RSS</p>
+         </div>
+         <div id="socialmedia">
+             Pinterest Facebook Twitter
+         </div>
 </div>
 </div>
     </div>
