--- a/remock.html
+++ b/remock.html
@@ -67,8 +67,25 @@
              <p>Subscribe By Email   Subscribe by RSS</p>
          </div>
          <div id="socialmedia">
-             Pinterest Facebook Twitter
+             <p>Pinterest Facebook Twitter</p>
          </div>
+         <div id="giveaway"> 
+                 <p>Featured Giveaway</p>
+         </div>
+        <div id="ad">
+         <img id="littlepic" src="littlepic.png">
+         <p>WIN - BullGuard Premium Protection</p>
+         <p>Technology is part of our<br></p>
+         <p>...Click Here To Enter</p>
+        <hr style="border-top: dotted 1px;"/>
+        </div>
+        <div id=tabletalk>
+        <p id=tabletalkorange>Table Talk</p>
+        <p>Tonight’s Table Talk ….to create conversation Q: To feel rested, how many hours of sleep do you need each night? Riddle: Q: In a green house lives a green man and in the pink house lives a pink man. Who lives in the white house? A: The president.</p>
+                </div>
+        <h2>Sponsored Links</h2>
+        <img id="bluebox" src="bluebox.png">
+        <img id="bestmommy" src="bestmommy.png">
 </div>
 </div>
     </div>
