added to left div

--- a/remock.html
+++ b/remock.html
@@ -55,6 +55,20 @@
             <li>Jelly beans</li>
             <li>Flowers</li>
         </ul>
+        <p>Here are the easy steps to pulling it together:</p>
+        <br>
+        <ol>
+            <li>Insert the smaller vase inside the large.</li>
+            <li>Layer jelly beans in the space between the two.</li>
+            <li>Arrange Peeps on top of the jelly beans.</li>
+            <li>Arrange your flowers</li>
+        </ol>
+        <h2>DIY Terra Cotta Easter Basket Centerpieces</h2>
+        <img id="easterbaskets" src="easterbaskets.jpg">
+        <p>From: <a href="#">Hostess Blog</a></p>
+        <p>If you're looking for a quick & easy Easter craft/centerpiece idea these <strong>Terra Cotta "Easter Baskets</strong> only take a few minutes and will look super cute on your Easter table! Added bonus: they're really inexpensive! All you need are small terra cotta pots in various sizes, scrapbook paper, "grass" filler and any embellishments you want to add (optional).</p>
+        <p><a href="#">Click here</a>for complete how to instructions</p>
+        <h2>Splendor in the Grass</h2>
         
 
 </div>
@@ -70,7 +84,7 @@
              <p>Pinterest Facebook Twitter</p>
          </div>
          <div id="giveaway"> 
-                 <p>Featured Giveaway</p>
+                 <h2>Featured Giveaway</h2>
          </div>
         <div id="ad">
          <img id="littlepic" src="littlepic.png">
